Bug 112387 - igt@i915_selftest@live_workarounds - timeout - GEM_BUG_ON(gt->awake)
Summary: igt@i915_selftest@live_workarounds - timeout - GEM_BUG_ON(gt->awake)
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: not set not set
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-25 12:09 UTC by Lakshmi
Modified: 2019-11-25 13:57 UTC (History)
1 user (show)

See Also:
i915 platform: ALL
i915 features: GEM/Other


Attachments

Description Lakshmi 2019-11-25 12:09:27 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-apl-guc/igt@i915_selftest@live_workarounds.html
<0> [647.712179] i915_sel-5476    2.... 637614093us : intel_gt_driver_remove: intel_gt_driver_remove:383 GEM_BUG_ON(gt->awake)
<2> [647.712861] kernel BUG at drivers/gpu/drm/i915/gt/intel_gt.c:383!
<4> [647.712882] CPU: 2 PID: 5476 Comm: i915_selftest Tainted: G     U  W         5.4.0-rc8-CI-CI_DRM_7415+ #1
<4> [647.713025] RIP: 0010:intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.713212]  i915_gem_driver_remove+0x34/0xc0 [i915]
<4> [647.713307]  i915_driver_remove+0xe5/0x110 [i915]
<4> [647.713400]  i915_pci_remove+0x19/0x40 [i915]
<4> [647.713494]  i915_pci_probe+0xb3/0x1c0 [i915]
<4> [647.713698] Modules linked in: i915(+) amdgpu gpu_sched ttm vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul btusb btrtl btbcm btintel ghash_clmulni_intel bluetooth snd_intel_dspcfg snd_hda_codec ecdh_generic ecc snd_hwdep snd_hda_core lpc_ich r8169 mei_me realtek snd_pcm mei intel_lpss_pci prime_numbers pinctrl_broxton pinctrl_intel [last unloaded: i915]
<3> [647.725762] in_atomic(): 0, irqs_disabled(): 0, non_block: 0, pid: 5476, name: i915_selftest
<4> [647.725778] CPU: 2 PID: 5476 Comm: i915_selftest Tainted: G     UD W         5.4.0-rc8-CI-CI_DRM_7415+ #1
<4> [647.726736]  ? intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.726849]  ? intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.726955] RIP: 0010:intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.727121]  i915_gem_driver_remove+0x34/0xc0 [i915]
<4> [647.727218]  i915_driver_remove+0xe5/0x110 [i915]
<4> [647.727312]  i915_pci_remove+0x19/0x40 [i915]
<4> [647.727410]  i915_pci_probe+0xb3/0x1c0 [i915]
<4> [647.727730] Modules linked in: i915(+) amdgpu gpu_sched ttm vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul btusb btrtl btbcm btintel ghash_clmulni_intel bluetooth snd_intel_dspcfg snd_hda_codec ecdh_generic ecc snd_hwdep snd_hda_core lpc_ich r8169 mei_me realtek snd_pcm mei intel_lpss_pci prime_numbers pinctrl_broxton pinctrl_intel [last unloaded: i915]
<4> [647.734959] CPU: 2 PID: 5476 Comm: i915_selftest Tainted: G     UD W         5.4.0-rc8-CI-CI_DRM_7415+ #1
<4> [647.735250]  ? intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.735365]  ? intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.735472] RIP: 0010:intel_gt_driver_remove+0x67/0x70 [i915]
<4> [647.735628]  i915_gem_driver_remove+0x34/0xc0 [i915]
<4> [647.735733]  i915_driver_remove+0xe5/0x110 [i915]
<4> [647.735827]  i915_pci_remove+0x19/0x40 [i915]
<4> [647.735923]  i915_pci_probe+0xb3/0x1c0 [i915]
<4> [647.997784] RIP: 0010:intel_gt_driver_remove+0x67/0x70 [i915]
Comment 1 CI Bug Log 2019-11-25 12:12:25 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* All machines: igt@i915_selftest@live_workarounds - timeout - GEM_BUG_ON(gt-&gt;awake)
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-apl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bdw-5557u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-cyan/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-kefka/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-n3050/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-nick/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bxt-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-cfl-8700k/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-cfl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-cml-s/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-cml-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-glk-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-icl-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-icl-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-icl-u3/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-icl-y/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-7500u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-7560u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-8809g/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-r/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-soraka/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-skl-6600u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-skl-6700k2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-skl-6770hq/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-skl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-whl-u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-apl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bdw-5557u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-kefka/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-n3050/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-nick/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bxt-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-cfl-8700k/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-cfl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-cml-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-glk-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-icl-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-icl-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-icl-u3/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-icl-y/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-7500u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-8809g/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-r/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-soraka/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-x1275/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-skl-6600u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-skl-6700k2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-skl-6770hq/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-skl-lmem/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-whl-u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bdw-5557u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bsw-n3050/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bsw-nick/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bxt-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-cfl-8700k/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-cfl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-cml-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-glk-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-icl-dsi/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-icl-u2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-icl-u3/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-icl-y/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-7500u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-7560u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-8809g/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-r/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-skl-6600u/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-skl-6700k2/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-skl-6770hq/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-skl-guc/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-skl-lmem/igt@i915_selftest@live_workarounds.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-whl-u/igt@i915_selftest@live_workarounds.html

* BSW BXT KBL WHL CFL: igt@runner@borted - fail - Previous test: i915_selftest (live_workarounds)
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-bxt-dsi/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-cfl-8109u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-cfl-8700k/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-kbl-7500u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-kbl-8809g/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-kbl-r/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-kbl-soraka/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-kbl-x1275/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_14714/fi-whl-u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-cyan/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-kefka/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-n3050/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bsw-nick/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-bxt-dsi/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-cfl-8700k/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-7500u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-7560u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-8809g/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-r/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-kbl-soraka/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7415/fi-whl-u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-kefka/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-n3050/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bsw-nick/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-bxt-dsi/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-cfl-8700k/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-7500u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-8809g/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-r/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-soraka/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-kbl-x1275/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7416/fi-whl-u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bsw-n3050/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bsw-nick/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-bxt-dsi/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-cfl-8700k/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-7500u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-7560u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-8809g/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-kbl-r/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_3752/fi-whl-u/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_15007/fi-cfl-8700k/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_15314/fi-cfl-8700k/igt@runner@aborted.html
Comment 2 Chris Wilson 2019-11-25 13:57:32 UTC
commit da0ef77e1e0ccff703efee82406c629d5c4f4bbb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 25 11:25:20 2019 +0000

    drm/i915/execlists: Fixup cancel_port_requests()
    
    I rushed a last minute correction to cancel_port_requests() to prevent
    the snooping of *execlists->active as the inflight array was being
    updated, without noticing we iterated the inflight array starting from
    active! Oops.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=112387
    Fixes: 331bf9059157 ("drm/i915/gt: Mark the execlists->active as the primary
 volatile access")
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Reviewed-by: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Reviewed-by: Andi Shyti <andi.shyti@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20191125112520.1760492-1-chris@chris-wilson.co.uk


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.